--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "mahjong",
+	"name": "space-game",
 	"version": "1.0.0",
 	"description": "",
 	"main": "index.js",
@@ -9,14 +9,14 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/ecc521/.git"
+		"url": "https://github.com/ecc521/space-game.git"
 	},
 	"author": "Tucker Willenborg",
 	"license": "UNLICENSED",
 	"bugs": {
-		"url": "https://github.com/ecc521/"
+		"url": "https://github.com/ecc521/pace-game"
 	},
-	"homepage": "https://github.com/ecc521/",
+	"homepage": "https://github.com/ecc521/pace-game",
 	"browserslist": [
 		"last 2 versions",
 		"not dead",
