--- a/package.json
+++ b/package.json
@@ -25,17 +25,18 @@
 		"Safari >= 8"
 	],
 	"devDependencies": {
+		"@babel/plugin-proposal-class-properties": "^7.10.4",
 		"@babel/plugin-transform-runtime": "^7.11.0",
 		"@bubblewrap/cli": "^1.5.0",
 		"mobile-drag-drop": "^2.3.0-rc.2",
-		"webpack-cli": "^3.3.12"
-	},
-	"dependencies": {
+		"webpack": "^4.44.1",
 		"@babel/core": "^7.11.0",
 		"@babel/preset-env": "^7.11.0",
 		"@babel/runtime": "^7.11.0",
 		"babel-loader": "^8.1.0",
-		"core-js": "^3.6.5",
-		"webpack": "^4.44.1"
+		"webpack-shell-plugin": "^0.5.0"
+	},
+	"dependencies": {
+		"core-js": "^3.6.5"
 	}
 }
