--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"webpack-shell-plugin": "^0.5.0"
 	},
 	"dependencies": {
-		"core-js": "^3.6.5"
+		"core-js": "^3.6.5",
+		"pixi.js": "^5.3.3"
 	}
 }
